src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Debit_Card_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC This will hold debit card number</description>
        <label>Debit Card Number</label>
        <referenceTo>CEC_Debit_Card_Detail__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
	<fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Debit_Card_Status__c</fullName>
        <formula>Debit_Card_Number__r.Active__c</formula>
        <label>Debit Card Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demandware_ID__c</fullName>
        <description>TO: Unique identifier of Demandware Customer Id</description>
        <externalId>true</externalId>
        <label>Demandware Customer No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deoleo_Opt_in__c</fullName>
        <description>CEC - Opt-In requirements for the consumer</description>
        <label>Deoleo Opt-in</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <label>Discipline</label>
        <picklist>
            <picklistValues>
                <fullName>Design (Creative)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design (Adaptive)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive (Digital)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Media Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging Print Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activations and Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer &amp; Customer Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution &amp; Mailing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point of Sale Materials (POSM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premiums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional Merchandise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Business Promotion Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Channel Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Promotion Print Production (Commercial Print)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing &amp; Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research - Ad hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research – Continuous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DistributorProgram__c</fullName>
        <description>Purpose : Distributor Program
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Distributor Program</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <description>CEC: To capture the document number</description>
        <label>Document Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>CEC: To capture the document type of the consumer. Ex: Passport, National Id</description>
        <label>Document Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drinking_frequency__c</fullName>
        <description>TO: Tea drinking frequency per week</description>
        <inlineHelpText>Per Week</inlineHelpText>
        <label>Tea Drinking Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Used for migrating accounts to production</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_ABCSegmentation__c</fullName>
        <description>This field is to calculate the ABC segmentation for each Account from the Segmentation custom object</description>
        <formula>IF(AND(FS_PotentialShare__c &gt;0,FS_PotentialShare__c &lt;3000),&apos;C&apos;,IF(FS_PotentialShare__c&gt;=5000,&apos;A&apos;,IF(AND(FS_PotentialShare__c&gt;=3000,FS_PotentialShare__c&lt;5000),&apos;B&apos;,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABC Segmentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_AmountOfVisitors__c</fullName>
        <description>For amount of visitors</description>
        <label>Amount Of Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_ApprovalRequestComments__c</fullName>
        <description>Created for sending an Approval Request on required changes</description>
        <inlineHelpText>Add request comments for required changes to Approval Request.</inlineHelpText>
        <label>Approval Request Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FS_BrandsRelevance__c</fullName>
        <description>Created for CTM Segmentation</description>
        <inlineHelpText>Customized Products = 0
Branded Porducts = 2.5
Branded are essential = 5</inlineHelpText>
        <label>Brands Relevance</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_BuyingGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purpose : A BG is an overriding organization that can consolidate purchasing for other org. to get better rebates/discounts. 
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Buying Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Buying Group)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_CHDNumber__c</fullName>
        <description>Purpose : CHD Number
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>CHD Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_ChainTargetingModel__c</fullName>
        <description>Purpose : This is the classification of your account 
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Chain Targeting Model</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FS_Compliancelevels__c</fullName>
        <description>Created for CTM segmentation</description>
        <inlineHelpText>Low = 0
Medium = 2.5
High = 5</inlineHelpText>
        <label>Compliance levels</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_ControllingAccountCode__c</fullName>
        <description>Purpose : A control account is a summary account in the general ledger
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Controlling Account</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_ConvenienceFactor__c</fullName>
        <description>Created for displaying Convenience factor from Segment object</description>
        <formula>FS_OperatorOutlet__r.FS_ConvenienceFactor__c</formula>
        <label>Convenience Factor</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_Customer_Number__c</fullName>
        <description>Purpose : Auto Number to create Account ID for Food Solutions
Data Source : NA | Integration : NA | Security Level : Restricted</description>
        <displayFormat>Act-{00000000}</displayFormat>
        <inlineHelpText>Auto Number to create Account ID for Food Solutions</inlineHelpText>
        <label>FS Customer Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FS_DistributionGroupArea__c</fullName>
        <label>Distribution Group Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FS_Distributor_Type__c</fullName>
        <description>Purpose: Used for TPR Calculation</description>
        <label>Distributor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slabco</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_FOHRelevance__c</fullName>
        <description>Created for CTM segmentation</description>
        <inlineHelpText>No interest in FOH = 0
Some interest in FOH = 2.5 
FOH Highly relevant = 5</inlineHelpText>
        <label>FOH Relevance</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_FoodTurnover__c</fullName>
        <description>Calculating the food turnover based on amount of visitors etc.</description>
        <formula>(FS_AmountOfVisitors__c  *  FS_OperatorOutlet__r.FS_DaysPerWeek__c  *  FS_OperatorOutlet__r.FS_AveragePricePerMeal__c  *  FS_OperatorOutlet__r.FS_WeeksPerYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food Turnover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_Food_Price_Value__c</fullName>
        <formula>FS_FoodTurnover__c  *  FS_OperatorOutlet__r.FS_FoodCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food Price Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_GrowthTrackRecord__c</fullName>
        <description>Created for CTM segmentation</description>
        <inlineHelpText>Below Mkt Avg = 0
In line with Mkt = 2.5
Above Mkt Avg = 5</inlineHelpText>
        <label>Growth Track Record</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_INN__c</fullName>
        <description>This field is used to store data used for Sales Planning</description>
        <label>INN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_LogisticAdministrativeComplexity__c</fullName>
        <description>Logistic &amp; Administrative Complexity</description>
        <inlineHelpText>Multiple WHS = 0
Specif Distributor = 2.5
Customer Delivers Directly = 5</inlineHelpText>
        <label>Logistic &amp; Administrative Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_MasterCode__c</fullName>
        <description>Purpose : To display Legal Entity code
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Master Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_MasterName__c</fullName>
        <description>Purpose : To display Legal Entity name
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Master Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_NumberofCategories__c</fullName>
        <description>Created for CTM segmentation</description>
        <inlineHelpText>0-25% = 0
 &gt;25  &lt;65% = 2.5  
&gt;65% = 5</inlineHelpText>
        <label>Number of Categories</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_OperatorOutlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator Outlet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.FS_SubSegmentRussia__c</field>
                <operation>equals</operation>
                <valueField>FS_Segmentation__c.Name</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FS_Segmentation__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_ParentAccountOwner__c</fullName>
        <description>Created for displaying the parent account owner  name on child account</description>
        <formula>if(AND(RecordType.Name=&apos;Distributor&apos;,NOT(ISNULL(ParentId))),
Parent.Owner.FirstName  +&quot; &quot;+ Parent.Owner.LastName,&apos;&apos;)</formula>
        <inlineHelpText>Displaying Parent Account owner from parentaccount lookup</inlineHelpText>
        <label>Parent Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_PotentialReach__c</fullName>
        <description>Created for CTM segmentation</description>
        <inlineHelpText>According to your local thresholds</inlineHelpText>
        <label>Potential Reach</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_PotentialShareEUR__c</fullName>
        <description>To displaying the UFS Potential share value in EURO currency type</description>
        <formula>(FS_Food_Price_Value__c * FS_OperatorOutlet__r.FS_PotentialUFSShareOfFoodCost__c * FS_ConvenienceFactor__c)/ $Setup.FSCurrencyinEUR__c.FS_EURO__c</formula>
        <label>UFS Potential Share (EUR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_PotentialShareRUB__c</fullName>
        <description>To displaying the UFS Potential share value in RUB currency type</description>
        <formula>(FS_Food_Price_Value__c * FS_OperatorOutlet__r.FS_PotentialUFSShareOfFoodCost__c * FS_ConvenienceFactor__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UFS Potential Share (RUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_PotentialShare__c</fullName>
        <formula>(FS_Food_Price_Value__c  *  FS_OperatorOutlet__r.FS_PotentialUFSShareOfFoodCost__c  *  FS_ConvenienceFactor__c)/ $Setup.FSCurrencyinEUR__c.FS_EURO__c</formula>
        <label>UFS Potential Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_PotentialValueSize__c</fullName>
        <description>Created for CTM segmentation.</description>
        <label>Potential Value Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_ProposedAccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for Account owner change Approval Process.</description>
        <label>Proposed Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_RTM__c</fullName>
        <description>Route to Market | Only Russia | Populated via Softserve</description>
        <inlineHelpText>Route to Market | Only Russia | Populated via Softserve</inlineHelpText>
        <label>RTM</label>
        <picklist>
            <picklistValues>
                <fullName>Independent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Chains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slabco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;C</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
	
    <fields>
        <fullName>FS_RusianRegion__c</fullName>
        <description>To display the Russia related Regions</description>
        <label>RFS Region</label>
        <picklist>
            <controllingField>FS_RussianCity__c</controllingField>
            <picklistValues>
                <fullName>Moscow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St.Pete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sibir &amp; Far East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undefined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_RussianCity__c</fullName>
        <description>Created to display the Russia specific city values.</description>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>MOSCOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAINT-PETERSBURG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABAKAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARKHANGELSK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMAVIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTRAKHAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARNAUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGOROD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIYSK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLAGOVESCHENSK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRATSK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRYANSK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEBOKSARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHELYABINSK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEREPOVETS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHERKASSY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHERNIGOV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHERNOVTSY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHITA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNEPROPETROVSK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DONETSK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EKATERINBURG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELISTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GROZNIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOSHKAR-OLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRKUTSK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVANOVO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IZHEVSK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KALININGRAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KALUGA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_RussianZone__c</fullName>
        <description>Zone is created for display the Russia specific Zone for Russia users.</description>
        <label>RFS Zone</label>
        <picklist>
            <controllingField>FS_RusianRegion__c</controllingField>
            <picklistValues>
                <fullName>Moscow &amp; CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St.Pete &amp; NW &amp; Bel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volga &amp; South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sibir &amp; Far East &amp; Ural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undefined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_SegmentRussia__c</fullName>
        <label>Operator Segment(Russia)</label>
        <picklist>
            <controllingField>FS_SubSegmentRussia__c</controllingField>
            <picklistValues>
                <fullName>Pubs/Bars/Entertaining center/Caffee</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Take Away</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canteens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesalers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_SoldToCode__c</fullName>
        <description>Purpose : Legal entity which receive goods  
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Sold-to code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_StrategicInitiatives__c</fullName>
        <description>Created for CTM segmentation</description>
        <inlineHelpText>Transactional = 0 
At least 2 out of 4 = 2.5
At least 3 out of 4 = 5</inlineHelpText>
        <label>Strategic Initiatives</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_SubSegmentRussia__c</fullName>
        <label>Operator Sub Segment(Russia)</label>
        <picklist>
            <picklistValues>
                <fullName>Бар / Паб</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Бортовое питание - Авиа</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Бортовое питание - Водный транспорт</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Бортовое питание - Ж/Д</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Бортовое питание – Заправки</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Гостиница 0-3*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Гостиница 4-5*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Доставка еды на дом/офис</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Кейтеринг</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Коммерческая столовая</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Кофейни</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Кулинария на точке продаж</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Оптовик</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Офисы</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Пищевое производство</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Развлекательный центр</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ресторан гастрономический (премиальный)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ресторан повседневный</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Социальная столовая</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Спорт</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Стрит-фуд</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Фаст-фуд</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Фри-фло, рестораны самообслуживания</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Другое</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Метро</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_Top_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the notification send to top client</description>
        <label>Top Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_hierarchyLevel__c</fullName>
        <description>Purpose: Used for the MDM request</description>
        <label>Hierarchy Level</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Number</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCH Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCH Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCH Level 6</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>